argocd/apps/frigate/manifests/host-network-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  namespace: frigate
spec:
  template:
    spec:
      hostNetwork: true
