argocd/apps/frigate/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: frigate-app
  name: frigate-httproute
  namespace: frigate
spec:
  hostnames:
  - frigate.yanello.net
  rules:
  - backendRefs:
    - name: frigate
      namespace: frigate
      port: 5000
      weight: 0
