argocd/apps/frigate/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frigate-vs
spec:
  hosts:
  - frigate.yanello.net
  - frigate.k8s.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: frigate
        port:
          number: 5000
